<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/xombo_logo" />

    <ImageView
        android:id="@+id/imgEmail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="230dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/nomalColor"
        android:theme="@style/EditTheme"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPwd"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="276dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#ffffff"
        app:srcCompat="@android:drawable/ic_secure" />

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="268dp"
        android:ems="10"
        android:hint="@string/pwd"
        android:textColorHint="@color/nomalColor"
        android:theme="@style/EditTheme"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="288dp"
        android:layout_marginTop="320dp"
        android:text="@string/forgot"
        android:textColor="@color/nomalColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="356dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="410dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>