<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imgEmail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:theme="@style/EditTheme"
        android:hint="@string/email"
        android:textColorHint="@color/nomalColor"
        android:textColor="@color/nomalColor"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPwd"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="210dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#ffffff"
        app:srcCompat="@android:drawable/ic_secure" />

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:theme="@style/EditTheme"
        android:hint="@string/pwd"
        android:textColorHint="@color/nomalColor"
        android:textColor="@color/nomalColor"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgConfirmPwd"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="260dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#ffffff"
        app:srcCompat="@android:drawable/ic_partial_secure" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/confirmPwd"
        android:textColorHint="@color/nomalColor"
        android:theme="@style/EditTheme"
        android:inputType="textPassword"
        android:textColor="@color/nomalColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="350dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>